add header desktop

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
 @use "../../node_modules/sass-rem" as to;
 @import "base/fonts";
+@import "base/colors";
 @import "base/common";
+@import "blocks/header";
