--- a/src/scss/base/_common.scss
+++ b/src/scss/base/_common.scss
@@ -9,13 +9,19 @@ a {
   color: $black;
 }
 
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .container {
   max-width: to.rem(1320px);
   width: 100%;
+}
+
+.btn {
+  color: $black;
+  text-align: center;
+  font-family: $font-onest;
+  font-size: to.rem(25px);
+  font-weight: 400;
+  text-transform: uppercase;
+  background-color: $yellow;
+  border-radius: 35px;
+  padding: to.rem(20.5px 72px);
 }
