add header scss

--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,10 +1,16 @@
 @import "./nav";
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding-top: to.rem(12px);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
   &__nav {
   }
 
