add train desktop styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,3 +5,6 @@
 @import "blocks/header";
 @import "blocks/hero";
 @import "blocks/runline";
+@import "blocks/train";
+@import "blocks/card";
+@import "blocks/swiper-train";
