--- a/src/scss/base/_colors.scss
+++ b/src/scss/base/_colors.scss
@@ -1,3 +1,7 @@
-$white: #fff;
+$white: #ffffff;
 $black: #323232;
 $yellow: #ffe600;
+$green: #859d6d;
+$blue: #20bffe;
+$grey: #c1c1c1;
+$light-grey: #fdfdfd;
