--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -1,5 +1,6 @@
 .card {
   &__content {
+    height: 100%;
     border-radius: 35px;
     border: 1px solid $yellow;
     overflow: hidden;
@@ -12,7 +13,7 @@
   }
 
   &__description {
-    padding: to.rem(40px);
+    padding: to.rem(80px 40px 86px);
   }
 
   &__title {
@@ -20,18 +21,19 @@
     font-family: $font-onest;
     font-size: to.rem(40px);
     font-weight: 800;
-    line-height: 130%; /* 52px */
+    line-height: 130%;
     text-transform: uppercase;
+    padding-bottom: to.rem(48px);
   }
 
   &__subtitle {
     display: block;
-    color: $light-grey;
+    color: $grey;
     font-family: $font-inter;
     font-size: to.rem(20px);
-    font-weight: 800;
-    line-height: to.rem(52px); /*  */
-    text-transform: uppercase;
+    font-weight: 600;
+    line-height: to.rem(46px);
+    text-transform: capitalize;
   }
 
   &__text {
@@ -39,7 +41,10 @@
     font-family: $font-inter;
     font-size: to.rem(20px);
     font-weight: 400;
-    line-height: to.rem(26px); /* 26px */
+    line-height: to.rem(26px);
+  }
+  &__text:not(:last-child) {
+    padding-bottom: to.rem(24px);
   }
 
   &__list {
@@ -49,6 +54,7 @@
     font-weight: 400;
     line-height: to.rem(26px);
     padding-left: to.rem(22px);
+    padding-bottom: to.rem(28px);
   }
 
   &__item {
@@ -67,6 +73,7 @@
   }
 
   &__cta {
+    padding: to.rem(20px 0);
     display: flex;
     flex-direction: column;
     gap: to.rem(12px);
