--- a/src/scss/base/_common.scss
+++ b/src/scss/base/_common.scss
@@ -15,30 +15,36 @@ a {
 }
 
 .btn {
+  @include font-base($font-onest, 25, 400, 0);
   color: $black;
   text-align: center;
-  font-family: $font-onest;
-  font-size: to.rem(25px);
-  font-weight: 400;
   text-transform: uppercase;
   background-color: $yellow;
   border-radius: 35px;
   padding: to.rem(20.5px 72px);
+  @include responsive-font-size-line-height(16, 25, 0, 0, 1320);
 }
 
 .title {
   color: $black;
-  font-family: $font-onest;
-  font-size: to.rem(100px);
-  font-weight: 800;
   text-transform: uppercase;
+  @include font-base($font-onest, 100, 800, 110);
+  @include responsive-font-size-line-height(50, 100, 60, 110, 1320);
 }
 
 .text {
   color: $black;
-  font-family: $font-inter;
-  font-size: to.rem(20px);
-  font-style: normal;
-  font-weight: 400;
-  line-height: to.rem(26px);
+  @include font-base($font-inter, 20, 400, 26);
+  @include responsive-font-size-line-height(16, 20, 21, 26, 1320);
+}
+
+.section {
+  display: flex;
+  justify-content: center;
+  padding: to.rem(150px 16px);
+  overflow: hidden;
+
+  @media screen and (max-width: 1320px) {
+    padding: max(to.rem(60px), to.rem(calc(150 * (100vw / 1320)))) to.rem(16px);
+  }
 }
