add trainers block styles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,3 +14,6 @@
 @import "blocks/camps-swiper";
 @import "blocks/service";
 @import "blocks/swiper-service";
+@import "blocks/trainers";
+@import "blocks/swiper-trainers";
+@import "blocks/instagram";
