--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,3 +17,5 @@
 @import "blocks/trainers";
 @import "blocks/swiper-trainers";
 @import "blocks/instagram";
+@import "blocks/contacts";
+@import "blocks/footer";
