--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -8,27 +8,27 @@
 
 .hero {
   &__content {
-    display: flex;
-    justify-content: space-between;
-    // min-height: to.rem(733.14px);
-    padding-bottom: to.rem(250px);
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-auto-columns: minmax(0, 1fr);
+    grid-template-columns: repeat(12, 1fr);
   }
 
   &__description {
   }
 
   &__title {
-    font-family: $font-onest;
     text-fill-color: $white; // Use for Safari
     -webkit-text-fill-color: $white; // Use for Chrome
     -webkit-text-stroke: 1px to.rem() $black; // Use for Chrome
     -webkit-text-stroke: to.rem(1px) solid $black;
     text-stroke: to.rem(1px) solid $black;
-    font-size: to.rem(100px);
-    font-weight: 800;
-    line-height: to.rem(110px);
     letter-spacing: to.rem(2px);
     text-transform: uppercase;
+
+    @include font-base($font-onest, 100, 800, 110);
+    @include responsive-font-size-line-height(40, 100, 45, 110, 1320);
+    // @include responsive-paddings(0, 0, 0, 0, 0, 0, 0, 0, 1320);
 
     &--black {
       text-fill-color: $black;
@@ -47,30 +47,45 @@
     line-height: to.rem(27.756px);
   }
 
+  &__top {
+    grid-area: 1 / 1 / 2 / span 8;
+  }
+
+  &__bottom {
+    grid-area: 2 / 10 / 3 / span 5;
+    padding-top: to.rem(70px);
+  }
+
   &__picture {
-    position: relative;
     &-top {
-      width: to.rem(532.52px);
-      height: to.rem(733.14px);
-      position: absolute;
-      right: 34px;
-      transform: rotate(5deg);
-      z-index: -1;
+      grid-area: 1 / 9 / 2 / span 6;
+      display: flex;
+      justify-content: flex-end;
+    }
+    &-bottom {
+      grid-area: 2 / 1 / 3 / span 8;
     }
 
-    &-bottom {
-      width: to.rem(733.14px);
-      height: to.rem(603px);
-      position: absolute;
+    &-wrapper-top {
+      position: relative;
+      width: 90%;
+      padding-top: 122%;
+      transform: rotate(5deg);
+    }
+
+    &-wrapper-bottom {
+      position: relative;
+      width: 100%;
+      height: 80%;
       transform: rotate(-5deg);
-      top: -94px;
-      z-index: -3;
-      left: 26px;
     }
   }
 
   &__img {
     &-top {
+      position: absolute;
+      top: 0;
+      right: 27px;
       height: 100%;
       width: 100%;
       object-fit: cover;
@@ -79,6 +94,9 @@
     }
 
     &-bottom {
+      position: absolute;
+      top: -26px;
+      left: 56px;
       height: 100%;
       width: 100%;
       object-fit: cover;
@@ -99,5 +117,8 @@
 
   &__btn {
     margin-top: to.rem(60px);
+    padding: to.rem(20.5px 72px);
+
+    @include responsive-paddings(20, 20.5, 20, 20.5, 30, 72, 30, 72, 1320);
   }
 }
