--- a/src/scss/blocks/_train.scss
+++ b/src/scss/blocks/_train.scss
@@ -10,6 +10,10 @@
     grid-template-columns: repeat(2, 1fr);
     gap: to.rem(40px);
     grid-auto-rows: 1fr; // Make all rows equal height
+
+    @include media-custom($screen-size: 660) {
+      grid-template-columns: 1fr;
+    }
   }
   &__card {
     overflow: hidden;
