--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -6,6 +6,10 @@
   display: flex;
   justify-content: center;
 
+  @media screen and (max-width: 1320px) {
+    padding: to.rem(12px 16px 0);
+  }
+
   &__container {
     display: flex;
     justify-content: space-between;
