--- a/src/scss/blocks/_train.scss
+++ b/src/scss/blocks/_train.scss
@@ -9,11 +9,13 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: to.rem(40px);
-    grid-auto-rows: 1fr; // Make all rows equal height
+    grid-auto-rows: 1fr;
 
     @include media-custom($screen-size: 660) {
       grid-template-columns: 1fr;
     }
+
+    @include responsive-gaps-all(32, 40);
   }
   &__card {
     overflow: hidden;
