--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @use "../../node_modules/sass-rem" as to;
+@import "mixins/fluid";
 @import "scroll-snap-slider";
 @import "base/fonts";
 @import "base/colors";
