--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -14,55 +14,51 @@
   &__label {
     position: absolute;
     z-index: 100;
-    background-color: $white;
-    color: $black;
-    padding: to.rem(18px 22px);
-    border-radius: 30px;
     top: 7%;
     left: 6%;
-    @include font-base($font-inter, 20, 400, 0);
-    @include responsive-font-size-line-height(16, 20, 0, 0);
-    @include responsive-paddings(16, 18, 16, 18, 16, 22, 16, 22);
+    background-color: $white;
+    @include font-mixin($font-inter, 400, $black);
+    font-size: fluid-value(16px, 20px);
+    padding: fluid-value(12px, 16px) fluid-value(16px, 24px);
+    border-radius: fluid-value(16.755px, 30px);
   }
 
   &__description {
-    padding: to.rem(60px 40px 86px);
-    @include responsive-paddings(32, 60, 32, 86, 16, 40, 16, 40);
+    padding: fluid-value(32px, 60px) fluid-value(16px, 40px);
   }
 
   &__title {
-    color: $light-grey;
+    @include font-mixin($font-onest, 800, $light-grey);
+    font-size: fluid-value(25px, 40px);
+    line-height: fluid-value(25px, 40px);
+    padding-bottom: fluid-value(24px, 48px);
     text-transform: uppercase;
-    padding-bottom: to.rem(48px);
-    @include font-base($font-onest, 40, 800, 52);
-    @include responsive-font-size-line-height(25, 20, 40, 52);
-    @include responsive-paddings(0, 0, 32, 48, 0, 0, 0, 0);
   }
 
   &__subtitle {
+    @include font-mixin($font-inter, 600, $grey);
+    font-size: fluid-value(16px, 20px);
+    line-height: fluid-value(20.8px, 26px);
+    padding-bottom: fluid-value(6px, 12px);
     display: block;
-    color: $grey;
     text-transform: capitalize;
-    @include font-base($font-inter, 25, 600, 46);
-    @include responsive-font-size-line-height(16, 25, 21, 46);
   }
 
   &__text {
-    color: $light-grey;
-    @include font-base($font-inter, 20, 400, 26);
-    @include responsive-font-size-line-height(16, 20, 21, 26);
+    @include font-mixin($font-inter, 400, $light-grey);
+    font-size: fluid-value(16px, 20px);
+    line-height: fluid-value(20.8px, 26px);
   }
   &__text:not(:last-child) {
-    padding-bottom: to.rem(24px);
+    padding-bottom: fluid-value(20px, 24px);
   }
 
   &__list {
-    color: $light-grey;
+    @include font-mixin($font-inter, 400, $light-grey);
+    font-size: fluid-value(16px, 20px);
+    line-height: fluid-value(20.8px, 26px);
     padding-left: to.rem(22px);
-    padding-bottom: to.rem(28px);
-    @include font-base($font-inter, 20, 400, 26);
-    @include responsive-font-size-line-height(16, 20, 21, 26);
-    @include responsive-paddings(0, 0, 20, 28, 16, 22, 0, 0);
+    padding-bottom: fluid-value(20px, 28px);
   }
 
   &__item {
@@ -70,25 +66,23 @@
   }
 
   &__price {
-    color: $light-grey;
-    @include font-base($font-inter, 20, 400, 26);
-    @include responsive-font-size-line-height(16, 20, 21, 26);
+    @include font-mixin($font-inter, 400, $light-grey);
+    font-size: fluid-value(16px, 20px);
+    line-height: fluid-value(20.8px, 26px);
     &--bold {
       font-weight: 700;
     }
   }
 
   &__cta {
-    padding: to.rem(20px 0);
+    padding: fluid-value(12px, 20px) 0;
     display: flex;
     flex-direction: column;
     gap: to.rem(12px);
-    @include responsive-paddings(12, 20, 0, 0, 0, 0, 0, 0);
   }
 
   &__btn {
-    padding: to.rem(19px 0 16px);
-    @include responsive-paddings(16, 19, 13, 16);
+    padding: fluid-value(16px, 19px) 0 fluid-value(13px, 16px);
   }
 
   &__btn:nth-child(2) {
